# brikie

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  MEMPALACE_TOOL_DESIGN.md  README.md  SESSION_HANDOVER.md  design.md  handover-prompt.md  install.sh  lcm.db  mempalace.db  pyproject.toml  wiki.db
.github/workflows/: docker.yml
brikie/: __init__.py  __main__.py  connect.py  gateway.py  install.py  onboard.py  recovery.py
brikie/auth/: __init__.py  openai_oauth.py
brikie/bricks/: __init__.py
brikie/bricks/improvement/: __init__.py  auto_fixer.py  base.py  fix_strategies.py  loop_detector.py
brikie/bricks/interface/: __init__.py  base.py  cli.py  discord_iface.py  event_bus.py  telegram.py
brikie/bricks/logging/: __init__.py  base.py  diagnostics.py  token_logger.py  tool_tracer.py
brikie/bricks/memory/: __init__.py  memory_brick.py  sqlite_pool.py
brikie/bricks/memory/lcm/: __init__.py  lcm_brick.py  lcm_context.py  lcm_store.py  schema.sql  tools.py
brikie/bricks/memory/mempalace/: __init__.py  chroma_manager.py  entity_extractor.py  mempalace_brick.py  mempalace_store.py  schema.sql  tools.py
brikie/bricks/memory/wiki/: __init__.py  schema.sql  wiki_brick.py  wiki_index.py  wiki_linter.py  wiki_search.py  wiki_store.py  wiki_tools.py
brikie/bricks/provider/: __init__.py  base.py  http_provider.py
brikie/bricks/registry/: __init__.py  base.py  installer.py  kadeia_installer.py  kadeia_registry.py  registry_client.py  tools.py
brikie/bricks/security/: __init__.py  base.py  firewall.py  sandbox.py  watchdog.py
brikie/bricks/soul/: __init__.py  base.py  crypto_trading_agent.py  dreamer.py  foreman.py  mason.py  sisyphus_orchestrator.py  web_design_agent.py
brikie/bricks/soul/manifests/: crypto_trading_agent.json  dreamer.json  foreman.json  sisyphus_orchestrator.json  web_design_agent.json
brikie/bricks/tool/: __init__.py  base.py  cloakbrowser.py  dummy.py  file_tools.py  github_tools.py  mcp_client.py
brikie/bricks/tool/goals/: goal_brick.py  goal_store.py  schema.sql
brikie/bricks/tool/swarm/: schema.sql  swarm_brick.py  swarm_store.py  workspace.py
brikie/config/: __init__.py  brick_numbers.py  default_soul.py  operating_discipline.py  provider_presets.py  types.py
brikie/kernel/: __init__.py  afk_manager.py  afk_protocol.py  event_loop.py  hooks.py  registry.py  relevance_scorer.py  soul_actor.py  state.py  subagent.py
brikie/server/: __init__.py  __main__.py  registry_server.py  store.py  website.py
docs/: memory-triage-2026-06-12.md
examples/openshell/: README.md
scripts/: verify_interrupt.py  verify_loop_detector.py  verify_swarm.py  verify_swarm_streaming.py
tests/: __init__.py  conftest.py  test_breakdown_recovery.py  test_brick_numbers.py  test_bricks.py  test_build.py  test_connect.py  test_context_budget.py  test_discord.py  test_dreamer_steering.py  test_event_bus.py  test_gateway.py  test_goals.py  test_improvement.py  test_integration.py  test_interrupt.py  test_kernel.py  test_lcm.py  test_logging.py  test_loop_detector.py  test_mcp.py  test_memory_integration.py  test_mempalace.py  test_openai_oauth.py  test_operating_discipline.py  test_provider_ux.py  test_recovery.py  test_registry.py  test_registry_server.py  test_relevance_scoring.py  test_resume.py  test_security.py  test_soul.py  test_soul_actor.py  test_subagent.py  test_swarm_adversarial.py  test_swarm_brick.py  test_swarm_durability.py  test_swarm_workspace.py  test_telegram.py  (+2 more)
tests/fixtures/: mock_mcp_server.py
