[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brikie"
version = "0.1.0"
description = "Modular agentic harness with Brick architecture"
readme = "README.md"
license = {"text" = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "tiktoken>=0.7.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.4.0",
]
memory = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
]

[project.scripts]
brikie = "brikie.__main__:entry_point"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_status = false

[tool.ruff]
line-length = 100
target-version = "py311"
