[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brikie"
version = "0.1.0"
description = "Modular agent harness — every capability is an optional, hot-swappable Brick"
readme = "README.md"
license = {"text" = "MIT"}
authors = [{name = "Veela Cleave"}]
keywords = ["agent", "llm", "harness", "modular", "bricks", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "prompt_toolkit>=3.0.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "tiktoken>=0.7.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.4.0",
]
discord = [
    "discord.py>=2.3.0",
]
memory = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
]

[project.urls]
Homepage = "https://brikie.co"
Repository = "https://github.com/VeelaCleave/brikie"

[project.scripts]
brikie = "brikie.__main__:entry_point"

[tool.setuptools.package-data]
# Explicit so installs without git metadata (Docker, sdists built from
# tarballs) still ship the Build Sets, soul manifests, and DB schemas.
brikie = [
    "bricks/build/sets/*.json",
    "bricks/soul/manifests/*.json",
    "bricks/memory/lcm/schema.sql",
    "bricks/memory/mempalace/schema.sql",
    "bricks/memory/wiki/schema.sql",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_status = false

[tool.ruff]
line-length = 100
target-version = "py311"
